# src/controllers/directors.controllers.js
@@ -1,9 +1,21 @@
-const {Directors, Contents} = require('../models');
+const {Directors, Contents, ContentDirectors} = require('../models');
 
 const get = async(req,res,next) => {
     const id = parseInt(req.params.id);
     try{
-        let director = await Directors.findOne({where: {id: id}, include: [{model: Contents}]});
+        let director = await Directors.findOne({
+            where: {id: id}, 
+            include: [
+                {
+                    model:Contents,
+                    attributes: [
+                        "id", "title", "description", "total_seasons", "imdb_score", 
+                        "relase_date", "play_time", "photo_link", "imdb_link"
+                    ],
+                    through: { attributes: [] }
+                },
+            ]
+        });
         res.json(director);
     }catch(error){
         next(error);
@@ -13,7 +25,16 @@ const get = async(req,res,next) => {
 const getAll = async(req,res,next) => {
     try{
         let directors = await  Directors.findAll({
-            include: [{model: Contents}],
+            include: [
+                {
+                    model:Contents,
+                    attributes: [
+                        "id", "title", "description", "total_seasons", "imdb_score", 
+                        "relase_date", "play_time", "photo_link", "imdb_link"
+                    ],
+                    through: { attributes: [] }
+                },
+            ],
             order:[['id', 'ASC']]
         });
         res.json(directors);
@@ -23,9 +44,15 @@ const getAll = async(req,res,next) => {
 }
 
 const create = async(req,res,next) => {
-    const {firstname,lastname,dob,biography,profile_photo,active} = req.body;
+    const {firstname,lastname,dob,biography,active} = req.body;
     try{
-        const director = await Directors.create({firstname,lastname,dob,biography,profile_photo,active});
+        const director = await Directors.create({
+            firstname,
+            lastname,
+            dob,
+            biography,
+            active
+        });
         res.json({director});
     }catch(error){
         next(error);
@@ -35,8 +62,11 @@ const create = async(req,res,next) => {
 const deleteDirector = async(req,res,next) => {
     const id = parseInt(req.params.id);
     try{
-        let director = await Directors.findOne({where: {id: id}, include: [{model: Contents}]})
+        let director = await Directors.findOne({where: {id: id}});
+
+        await ContentDirectors.destroy({where: {director_id: id}});
         await Directors.destroy({where: {id: id}});
+
         res.json(director);
     }catch(error){
         next(error)
@@ -47,9 +77,28 @@ const update = async(req,res,next) => {
     const id = parseInt(req.params.id);
     const {firstname,lastname,dob,biography,profile_photo,active} = req.body;
     try{
-        await Directors.update({firstname, lastname, dob, biography, profile_photo, active},
-                            {where: {id: id}});
-        const director = await Directors.findOne({where: {id: id}, include: [{model: Contents}]});
+        await Directors.update({
+            firstname, 
+            lastname, 
+            dob, 
+            biography, 
+            profile_photo, 
+            active
+        },
+        {where: {id: id}});
+        const director = await Directors.findOne({
+            where: {id: id}, 
+            include: [
+                {
+                    model:Contents,
+                    attributes: [
+                        "id", "title", "description", "total_seasons", "imdb_score", 
+                        "relase_date", "play_time", "photo_link", "imdb_link"
+                    ],
+                    through: { attributes: [] }
+                },
+            ]
+        });
         res.json(director);
     }catch(error){
         next(error)
